--- a/scritturaTesi/bibliografia.bib
+++ b/scritturaTesi/bibliografia.bib
@@ -86,4 +86,85 @@ DOI = {10.3390/e24101463}
 	file = {Milicevic et al. - 2018 - Key Reconciliation with Low-Density Parity-Check C.pdf:/home/skesky/Zotero/storage/WZLJLQ89/Milicevic et al. - 2018 - Key Reconciliation with Low-Density Parity-Check C.pdf:application/pdf},
 }
 
+@ARTICLE{6769090,
+  author={Shannon, C. E.},
+  journal={The Bell System Technical Journal}, 
+  title={Communication theory of secrecy systems}, 
+  year={1949},
+  volume={28},
+  number={4},
+  pages={656-715},
+  doi={10.1002/j.1538-7305.1949.tb00928.x}}
+  
+  @ARTICLE{1055638,
+  author={Diffie, W. and Hellman, M.},
+  journal={IEEE Transactions on Information Theory}, 
+  title={New directions in cryptography}, 
+  year={1976},
+  volume={22},
+  number={6},
+  pages={644-654},
+  doi={10.1109/TIT.1976.1055638}}
+  
+  @article{rivest1978method,
+  title={A method for obtaining digital signatures and public-key cryptosystems},
+  author={Rivest, Ronald L and Shamir, Adi and Adleman, Leonard},
+  journal={Communications of the ACM},
+  volume={21},
+  number={2},
+  pages={120--126},
+  year={1978},
+  publisher={ACM New York, NY, USA}
+}
 
+@INPROCEEDINGS{365700,
+  author={Shor, P.W.},
+  booktitle={Proceedings 35th Annual Symposium on Foundations of Computer Science}, 
+  title={Algorithms for quantum computation: discrete logarithms and factoring}, 
+  year={1994},
+  volume={},
+  number={},
+  pages={124-134},
+  doi={10.1109/SFCS.1994.365700}}
+  
+  @article{Bennett_2014,
+	doi = {10.1016/j.tcs.2014.05.025},
+  
+	url = {https://doi.org/10.1016%2Fj.tcs.2014.05.025},
+  
+	year = 2014,
+	month = {dec},
+  
+	publisher = {Elsevier {BV}
+},
+  
+	volume = {560},
+  
+	pages = {7--11},
+  
+	author = {Charles H. Bennett and Gilles Brassard},
+  
+	title = {Quantum cryptography: Public key distribution and coin tossing},
+  
+	journal = {Theoretical Computer Science}
+}
+
+
+@article{zhao_development_2018,
+	title = {Development of {Quantum} {Key} {Distribution} and {Attacks} against {It}},
+	volume = {1087},
+	issn = {1742-6588, 1742-6596},
+	url = {https://iopscience.iop.org/article/10.1088/1742-6596/1087/4/042028},
+	doi = {10.1088/1742-6596/1087/4/042028},
+	abstract = {Secure and efficient communication between two parties always incents scholars for further research. Creation of such a means of communication yields commercial benefits for our society. With the creation of a quantum computer, some classical protocols used for secure communication is no longer secure. Quantum key distribution is created to solve this problem. Although a quantum key distribution protocol is in theory guaranteed to be secure, there has been ways to breach its security in real life application. Since the creation of the first quantum key distribution protocol, there has been a rival between the defending and attacking side of quantum key distribution. In this paper, we first seek to discuss the basics of the first quantum key distribution protocol. Secondly, we discuss about the attacks against that protocol and the modifications made to the protocol in response to these attacks. Currently, researchers have permanently closed one side of the implementation loophole that could give rise to potential means of hacking of the protocol.},
+	language = {en},
+	urldate = {2023-10-06},
+	journal = {J. Phys.: Conf. Ser.},
+	author = {Zhao, Yusheng},
+	month = sep,
+	year = {2018},
+	pages = {042028},
+	annote = {Da leggere il paragrafo che parla del protocollo BB84 per scrivere l’introduzione
+},
+	file = {Zhao - 2018 - Development of Quantum Key Distribution and Attack.pdf:/home/skesky/Zotero/storage/YZCT7TTX/Zhao - 2018 - Development of Quantum Key Distribution and Attack.pdf:application/pdf},
+}
