modified title and chapter name

--- a/scritturaTesi/esempioTesi.tex
+++ b/scritturaTesi/esempioTesi.tex
@@ -3,7 +3,7 @@
 
 % --- INIZIO dati relativi al template TesiDiaUniroma3
 % dati obbligatori, necessari al frontespizio
-\titolo{Simulazione GM-CVQKD}
+\titolo{Sviluppo di un simulatore per la crittografia quantistica a variabili continue}
 \autore{Kevin Santodonato}
 \matricola{548019}
 \relatore{Prof. Matteo Rosati}
@@ -37,8 +37,8 @@
 % il comando ``capitolo'' ha come parametri:
 % 1) il titolo del capitolo
 % 2) il nome del file tex (senza estensione) che contiene il capitolo. Tale nome \`e usato anche come label del capitolo
-\capitolo{Descrizione quantistica di un segnale}{capitolo_1}
-\capitolo{Quantum Key Distribution}{capitolo_2}
+\capitolo{Descrizione quantistica di un segnale ottico}{capitolo_1}
+\capitolo{Breve storia della QKD}{capitolo_2}
 \capitolo{Simulazione}{capitolo_3}
 
 % ----- Parte finale della tesi (obbligatorio)
